--- a/frontend/hackathon2024/src/components/footer/footer.css
+++ b/frontend/hackathon2024/src/components/footer/footer.css
@@ -1,8 +1,9 @@
 .Footer {
     background-color: rgba(0, 30, 63, 0.8);
     text-align: center;
-    border-radius: 5px;
+    border-radius: 10px;
     color: white;
+    margin-bottom: 10px;
 }
 
 .Footer a {
