--- a/frontend/hackathon2024/src/components/quizSolver/quizSolver.css
+++ b/frontend/hackathon2024/src/components/quizSolver/quizSolver.css
@@ -1,8 +1,13 @@
-.container{
+.pytanie{
     box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2);
     background-color: rgba(255, 255, 255, 0.75);
     margin-top: 20px;
     margin-bottom: 20px;
     border-radius: 10px;
     padding: 20px;
+}
+
+.pytanie p{
+    font-size: 20px;
+    font-weight: bold;
 }
