--- a/frontend/hackathon2024/src/components/quizSolver/quizSolver.css
+++ b/frontend/hackathon2024/src/components/quizSolver/quizSolver.css
@@ -11,3 +11,25 @@
     font-size: 20px;
     font-weight: bold;
 }
+
+.zakonczQuiz{
+    background-color: rgb(0, 150, 180);
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    font-size: 25px;
+    cursor: pointer;
+    border-radius: 5px;
+    margin-right: auto;
+    margin-left: auto;
+    margin-top: 10px;
+    margin-bottom: 20px;
+}
+
+.zakonczQuiz:hover{
+    background-color: rgb(0, 76, 91);
+}
+
+.containerForButton{
+    text-align: center;
+}
